--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-owl-carousel": "^2.3.3",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
@@ -45,6 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.0"
+    "gh-pages": "^3.2.1"
   }
 }
